# serial-number-detection

./: README.md  pyproject.toml  requirements.txt
serial_agent/: __init__.py  agent.py  api.py  config.py  models.py  ocr.py  parsing.py  repository.py  verification.py
serial_ai_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_parsing.py
